--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Graffiello_v</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="color-scheme" content="light">
   <style>
@@ -20,8 +21,7 @@
     <div class="max-w-7xl mx-auto px-6 md:px-8 h-16 flex items-center justify-between">
       <a href="#home" class="flex items-center gap-3">
         <!-- small mark -->
-        <div class="w-8 h-8 rounded-lg bg-slate-900 text-white flex items-center justify-center font-bold">갈</div>
-        <span class="font-semibold tracking-wide">Graffiello_v</span>
+        <div class="w-8 h-8 rounded-lg bg-slate-900 text-white flex items-center justify-center font-bold">갈˚</div>
       </a>
 
       <nav class="hidden md:flex items-center gap-8 text-sm">
